fix buttons too short so text goes nextline

--- a/client/src/Sass/pages/SettingsView.scss
+++ b/client/src/Sass/pages/SettingsView.scss
@@ -36,10 +36,10 @@
 
   & button {
     margin: 10px;
-    width: 130px;
+    width: 140px;
   }
 }
-.settingsView__profileBtns {
+.settingsView-profileBtns {
   display: flex;
   flex-direction: row;
 }
